syntax = "proto3";

option go_package = "./proto";

message CreateUserRequest{
  string username = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message SingleUserRequest{
  string id = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserRequest{
  string id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string password = 5;
}

message UserProfileResponse{
  string id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string token_key = 5;
  bool passwordIsOk = 6;
}


message SuccessResponse{
  string response = 1;
}

service UserService {
  rpc Create(CreateUserRequest) returns (UserProfileResponse);
  rpc Read(SingleUserRequest) returns (UserProfileResponse);
  rpc Update(UpdateUserRequest) returns (SuccessResponse);
  rpc Delete(SingleUserRequest) returns (SuccessResponse);
}
